<resources>
    <string name="create_car_ad">Опубликовать объявление</string>
    <string name="brand">Марка</string>
    <string name="model">Модель</string>
    <string name="mileage">Пробег</string>
    <string name="km">км</string>
    <string name="enter_car_mileage">Введите пробег автомобиля в км.</string>
    <string name="hp">л.с.</string>
    <string name="enter_car_engine_power">Введите мощность двигателя в л.с.</string>
    <string name="engine_power">Мощность двигателя</string>
    <string name="L">л</string>
    <string name="engine_capacity">Объём двигателя</string>
    <string name="enter_car_engine_capacity">Введите объём двигателя в л.</string>
    <string name="fuel_type">Тип топлива</string>
    <string name="body_type">Тип кузова</string>
    <string name="color">Цвет</string>
    <string name="transmission">Коробка передач</string>
    <string name="drivetrain">Привод</string>
    <string name="wheel">Расположение руля</string>
    <string name="condition">Состояние</string>
    <string name="owners">Количество владельцев</string>
    <string name="ownership_period">Период владения</string>
    <string-array name="number_of_years">
        <item>0 лет</item>
        <item>1 год</item>
        <item>2 года</item>
        <item>3 года</item>
        <item>4 года</item>
        <item>5 лет</item>
        <item>6 лет</item>
        <item>7 лет</item>
        <item>8 лет</item>
        <item>9 лет</item>
        <item>10 лет</item>
        <item>11 лет</item>
        <item>12 лет</item>
        <item>13 лет</item>
        <item>14 лет</item>
        <item>15 лет</item>
        <item>16 лет</item>
        <item>17 лет</item>
        <item>18 лет</item>
        <item>19 лет</item>
        <item>20 лет</item>
        <item>21 год</item>
        <item>22 года</item>
        <item>23 года</item>
        <item>24 года</item>
        <item>25 лет</item>
        <item>26 лет</item>
        <item>27 лет</item>
        <item>28 лет</item>
        <item>29 лет</item>
        <item>30 лет</item>
        <item>31 год</item>
        <item>32 года</item>
        <item>33 года</item>
        <item>34 года</item>
        <item>35 лет</item>
        <item>36 лет</item>
        <item>37 лет</item>
        <item>38 лет</item>
        <item>39 лет</item>
        <item>40 лет</item>
        <item>41 год</item>
        <item>42 года</item>
        <item>43 года</item>
        <item>44 года</item>
        <item>45 лет</item>
        <item>46 лет</item>
        <item>47 лет</item>
        <item>48 лет</item>
        <item>49 лет</item>
        <item>50 лет</item>
        <item>51 год</item>
        <item>52 года</item>
        <item>53 года</item>
        <item>54 года</item>
        <item>55 лет</item>
        <item>56 лет</item>
        <item>57 лет</item>
        <item>58 лет</item>
        <item>59 лет</item>
        <item>60 лет</item>
        <item>61 год</item>
        <item>62 года</item>
        <item>63 года</item>
        <item>64 года</item>
        <item>65 лет</item>
        <item>66 лет</item>
        <item>67 лет</item>
        <item>68 лет</item>
        <item>69 лет</item>
        <item>70 лет</item>
        <item>71 год</item>
        <item>72 года</item>
        <item>73 года</item>
        <item>74 года</item>
        <item>75 лет</item>
        <item>76 лет</item>
        <item>77 лет</item>
        <item>78 лет</item>
        <item>79 лет</item>
        <item>80 лет</item>
        <item>81 год</item>
        <item>82 года</item>
        <item>83 года</item>
        <item>84 года</item>
        <item>85 лет</item>
        <item>86 лет</item>
        <item>87 лет</item>
        <item>88 лет</item>
        <item>89 лет</item>
        <item>90 лет</item>
        <item>91 год</item>
        <item>92 года</item>
        <item>93 года</item>
        <item>94 года</item>
        <item>95 лет</item>
        <item>96 лет</item>
        <item>97 лет</item>
        <item>98 лет</item>
        <item>99 лет</item>
        <item>100 лет</item>
    </string-array>
    <string-array name="number_of_months">
        <item>1 месяц</item>
        <item>2 месяца</item>
        <item>3 месяца</item>
        <item>4 месяца</item>
        <item>5 месяцев</item>
        <item>6 месяцев</item>
        <item>7 месяцев</item>
        <item>8 месяцев</item>
        <item>9 месяцев</item>
        <item>10 месяцев</item>
        <item>11 месяцев</item>
        <item>12 месяцев</item>
    </string-array>
    <string name="price">Цена</string>
    <string name="enter_car_price">Введите цену автомобиля</string>
    <string name="vin">VIN</string>
    <string name="enter_car_vin">VIN</string>
    <string name="year">Год</string>
    <string name="description">Описание</string>
    <string name="description_et">Расскажите подробно об автомобиле</string>
    <string name="create_ad">Опубликовать объявление</string>
    <string name="photos">Фотографии</string>
    <string name="log_in_to_be_able_to_post_car_ads">Войдите в аккаунт, чтобы размещать объявления о продаже автомобилей</string>
    <string name="edit_car_ad">Редактировать объявление</string>
    <string name="back_button">Кнопка назад</string>
    <string name="edit_ad">Редактировать объявление</string>
    <string name="check_button">Иконка проверки</string>
    <string name="successfully_created_new_car_ad">Объявление успешно опубликовано!</string>
    <string name="successfully_updated_car_ad">Объявление успешно обновлено!</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="error_photos_required">Необходимо добавить хотя бы одно фото автомобиля</string>
    <string name="error_vin_invalid">Номер VIN некорректен</string>
    <string name="error_vin_required">VIN должен быть указан</string>
    <string name="error_brand_required">Марка должна быть указана</string>
    <string name="error_model_required">Модель должна быть указана</string>
    <string name="error_year_required">Год должен быть указан</string>
    <string name="error_price_required">Цена должна быть указана</string>
    <string name="error_engine_power_invalid">Неверное значение мощности двигателя</string>
    <string name="error_engine_power_required">Мощность двигателя должна быть указана</string>
    <string name="error_engine_capacity_invalid">Неверное значение объёма двигателя</string>
    <string name="error_engine_capacity_required">Объём двигателя должен быть указан</string>
    <string name="error_fuel_type_required">Тип топлива должен быть указан</string>
    <string name="error_mileage_required">Пробег должен быть указан</string>
    <string name="error_body_type_required">Тип кузова должен быть указан</string>
    <string name="error_color_required">Цвет должен быть указан</string>
    <string name="error_transmission_required">Коробка передач должна быть указана</string>
    <string name="error_drivetrain_required">Привод должен быть указан</string>
    <string name="error_wheel_required">Расположение руля должно быть указано</string>
    <string name="error_condition_required">Состояние должно быть указано</string>
    <string name="error_owners_required">Количество владельцев должно быть указано</string>
    <string name="error_ownership_period_required">Период владения должен быть указан</string>
    <string-array name="body_types">
        <item>Седан</item>
        <item>Купе</item>
        <item>Универсал</item>
        <item>Хэтчбек</item>
        <item>Минивэн</item>
        <item>Пикап</item>
        <item>Лимузин</item>
        <item>Фургон</item>
        <item>Кабриолет</item>
        <item>Лифтбек</item>
        <item>Внедорожник</item>
        <item>Грузовик</item>
    </string-array>
    <string-array name="conditions">
        <item>Не битый</item>
        <item>Битый</item>
        <item>Требует ремонта</item>
    </string-array>
    <string-array name="drivetrains">
        <item>Полный привод (AWD)</item>
        <item>Передний привод (FWD)</item>
        <item>Задний привод (RWD)</item>
    </string-array>
    <string-array name="fuel_types">
        <item>Бензин</item>
        <item>Дизель</item>
        <item>Гибрид</item>
        <item>Электро</item>
    </string-array>
    <string-array name="transmissions">
        <item>Автоматическая</item>
        <item>Роботизированная</item>
        <item>Вариатор</item>
        <item>Механическая</item>
    </string-array>
    <string-array name="wheels">
        <item>Правый руль</item>
        <item>Левый руль</item>
    </string-array>
    <string-array name="colors">
        <item>Чёрный</item>
        <item>Серый</item>
        <item>Серебристый</item>
        <item>Белый</item>
        <item>Красный</item>
        <item>Розовый</item>
        <item>Оранжевый</item>
        <item>Золотой</item>
        <item>Жёлтый</item>
        <item>Зелёный</item>
        <item>Голубой</item>
        <item>Синий</item>
        <item>Фиолетовый</item>
        <item>Пурпурный</item>
        <item>Коричневый</item>
        <item>Бежевый</item>
    </string-array>
</resources>